# retrostore-c-sdk

./: CMakeLists.txt  README.md
cpp/: .gitignore  WORKSPACE
cpp/main/: BUILD  data-fetcher.h  default-data-fetcher.cc  default-data-fetcher.h  retrostore.cc  retrostore.h
cpp/main/proto/: ApiProtos.pb.c  ApiProtos.pb.h
esp32/: .gitignore  sdkconfig
esp32/main/: CMakeLists.txt  common.h  data-fetcher-esp.cpp  data-fetcher-esp.h  retrostore.cpp  retrostore.h  retrostore_test_main.cpp
esp32/main/proto/: ApiProtos.pb.c  ApiProtos.pb.h
main/: data-fetcher-esp.cpp  retrostore.cpp
main/include/: common.h  data-fetcher-esp.h  retrostore.h
main/proto/: ApiProtos.pb.c  ApiProtos.pb.h  BUILD
